Fix {bz: 3285} by making column headers left-aligned.
No need to force them to right-aligned; it messes up the alignment with other
stuff in the body of the table (e.g. checkboxes for user/group selection).

--- a/nlw/share/skin/common/css/xhtml/control.css
+++ b/nlw/share/skin/common/css/xhtml/control.css
@@ -73,7 +73,6 @@ span.external {
 
 tbody tr th { 
     font-weight: normal;
-    text-align: right;
 }
 
 tr.is-hidden td {
